--- a/RouterSimulator/RouterSimulator.vcxproj
+++ b/RouterSimulator/RouterSimulator.vcxproj
@@ -141,10 +141,23 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Connection.h" />
+    <ClInclude Include="Device.h" />
+    <ClInclude Include="Ethernet.h" />
+    <ClInclude Include="Interface.h" />
+    <ClInclude Include="IP.h" />
+    <ClInclude Include="MAC.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Wireless.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Connection.cpp" />
+    <ClCompile Include="Device.cpp" />
+    <ClCompile Include="Ethernet.cpp" />
+    <ClCompile Include="Interface.cpp" />
+    <ClCompile Include="IP.cpp" />
+    <ClCompile Include="MAC.cpp" />
     <ClCompile Include="RouterSimulator.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -152,6 +165,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Wireless.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
