--- a/RouterSimulator/RouterSimulator.vcxproj
+++ b/RouterSimulator/RouterSimulator.vcxproj
@@ -146,9 +146,12 @@
     <ClInclude Include="Interface.h" />
     <ClInclude Include="IP.h" />
     <ClInclude Include="MAC.h" />
+    <ClInclude Include="Router.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="WiredNode.h" />
     <ClInclude Include="Wireless.h" />
+    <ClInclude Include="WirelessNode.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Device.cpp" />
@@ -156,6 +159,7 @@
     <ClCompile Include="Interface.cpp" />
     <ClCompile Include="IP.cpp" />
     <ClCompile Include="MAC.cpp" />
+    <ClCompile Include="Router.cpp" />
     <ClCompile Include="RouterSimulator.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -163,7 +167,9 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="WiredNode.cpp" />
     <ClCompile Include="Wireless.cpp" />
+    <ClCompile Include="WirelessNode.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
